--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,6 @@ migrate_working_dir/
 *.iml
 *.ipr
 *.iws
-.idea/
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
@@ -46,3 +45,11 @@ app.*.map.json
 
 #env
 *.env
+
+# Lock file (ВАЖНО для шаблона удалить после init project)
+pubspec.lock
+
+# IDE
+.idea/
+.vscode/
+*.iml
