--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,6 +3,8 @@ linter:
   rules:
     public_member_api_docs: false
     one_member_abstracts: false
+    eol_at_end_of_file: false
+    directives_ordering: false
 analyzer:
   errors:
     omit_local_variable_types: ignore
